--- a/index.html
+++ b/index.html
@@ -35,49 +35,11 @@
     <section>
         <div>
             
-            <div class="wrapper">
-                <div class="slider" id="slider">
-                  <ul class="slides">
-                    <li class="slide" id="slide1">
-                      <a href="#">
-                        <p class="caption">Texto llamativo</p>
-                        <img src="hombres.jpg" alt="hombres">
-                      </a>
-                    </li>
-                    <li class="slide" id="slide2">
-                      <a href="#">
-                        <p class="caption">Texto llamativo</p>
-                        <img src="mujeres.jpg" alt="mujeres">
-                      </a>
-                    </li>
-                    <li class="slide" id="slide3">
-                      <a href="#">
-                        <p class="caption">Texto llamativo</p>
-                        <img src="accesorios.jpg" alt="accesorios">
-                      </a>
-                    </li>
-                    <li class="slide" id="slide4">
-                      <a href="#">
-                        <p class="caption">Texto llamativo</p>
-                        <img src="photo4.jpg" alt="photo 4">
-                      </a>
-                    </li>
-                    <li class="slide" id="slide5">
-                      <a href="#">
-                         <p class="caption">Texto llamativo</p>
-                         <img src="hombres.jpg" alt="photo 5">
-                      </a>
-                    </li>
-                  </ul>
-                  <ul class="slider-controler">
-                    <li><a href="#slide1">&bullet;</a></li>
-                    <li><a href="#slide2">&bullet;</a></li>
-                    <li><a href="#slide3">&bullet;</a></li>
-                    <li><a href="#slide4">&bullet;</a></li>
-                    <li><a href="#slide5">&bullet;</a></li>
-                  </ul>
-                </div>
-              </div>
+            <!--    
+
+                ACA PONES EL SLIDER
+                de las imagenes mujeres, hombres y accesorios
+            -->
 
         </div>
         <hr>
