agregado de imagenes

--- a/index.html
+++ b/index.html
@@ -33,14 +33,10 @@
         </div>
     </header>
     <section>
-        <div>
-            
-            <!--    
-
-                ACA PONES EL SLIDER
-                de las imagenes mujeres, hombres y accesorios
-            -->
-
+        <div>           
+            <img src="img/hombres.jpg" width="600" />
+            <img src="img/mujeres.jpg" width="600" />
+            <img src="img/accesorios.jpg" width="600" />
         </div>
         <hr>
         <div id="ropa_hombre">
