--- a/index.html
+++ b/index.html
@@ -5,21 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PaginaPrueba</title>
+    <link rel="stylesheet" href="estilos.css"/>
 </head>
 
 <body>
     <header>
-        <div>
+        <div class="contenedor">
             <a href="">Mi cuenta</a>
         </div>
-        <div>
-            <div>
-                <p>Contáctanos</p>
-                <p>987654321</p>
-            </div>
-            <div>
-                <h1>Ropita Pal Gym</h1>
-            </div>
+        <div class= "contenedor2">
+                <p class="contacto">Contáctanos<br> 987654321</p>
+                <h1 class="titulo">Ropita Pal Gym</h1>
         </div>
         <div>
             <ul>
@@ -33,10 +29,11 @@
         </div>
     </header>
     <section>
-        <div>           
-            <img src="img/hombres.jpg" width="600" />
-            <img src="img/mujeres.jpg" width="600" />
-            <img src="img/accesorios.jpg" width="600" />
+        <div> 
+        
+            <img src="img/hombres.jpg" width="600" height="400"/>
+            <img src="img/mujeres.jpg" width="600" height="400"/>
+            <img src="img/accesorios.jpg" width="600" height="400"/>
         </div>
         <hr>
         <div id="ropa_hombre">
