--- a/index.html
+++ b/index.html
@@ -29,11 +29,20 @@
         </div>
     </header>
     <section>
-        <div> 
-        
-            <img src="img/hombres.jpg" width="600" height="400"/>
-            <img src="img/mujeres.jpg" width="600" height="400"/>
-            <img src="img/accesorios.jpg" width="600" height="400"/>
+        <div class="slider"> 
+            <ul>
+                <li>
+                    <img src="img/hombres.jpg" width="350" height="250"/>
+                </li>
+            
+                <li>
+                    <img src="img/mujeres.jpg" width="350" height="250"/>
+                </li>
+                <li>
+                    <img src="img/accesorios.jpg" width="350" height="250"/>
+                </li>
+            </ul>
+
         </div>
         <hr>
         <div id="ropa_hombre">
