--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PaginaPrueba</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css"/>
 </head>
 
 <body>
     <header>
         <div class="contenedor">
-            <a href="">Mi cuenta</a>
+            <a href="" class="btn btn-primary">Mi cuenta</a>
         </div>
         <div class= "contenedor2">
                 <p class="contacto">Contáctanos<br> 987654321</p>
@@ -29,21 +30,27 @@
         </div>
     </header>
     <section>
-        <div class="slider"> 
-            <ul>
-                <li>
-                    <img src="img/hombres.jpg" width="350" height="250"/>
-                </li>
-            
-                <li>
-                    <img src="img/mujeres.jpg" width="350" height="250"/>
-                </li>
-                <li>
-                    <img src="img/accesorios.jpg" width="350" height="250"/>
-                </li>
-            </ul>
-
-        </div>
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="10000">
+                <img src="img/principal_men.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="img/principal_woman.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/principal_accesorios.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         <hr>
         <div id="ropa_hombre">
             <h2>Ropa para hombres</h2>
@@ -124,5 +131,8 @@
         <a href="#accesorios">Accesorios</a>
         <a href="mailto:pieroangel955@gmail.com">Contáctanos</a>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 </body>
 </html>
