--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="img/principal_men.jpg" class="d-block w-100" alt="...">
+                <img src="img/principal_men.jpg" class="d-block w-100" alt="Man">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="img/principal_woman.jpg" class="d-block w-100" alt="...">
+                <img src="img/principal_woman.jpg" class="d-block w-100" alt="Woman">
               </div>
               <div class="carousel-item">
-                <img src="img/principal_accesorios.jpg" class="d-block w-100" alt="...">
+                <img src="img/principal_accesorios.jpg" class="d-block w-100" alt="Acss">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
