login_primera parte

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="contenedor">
-            <a href="" class="btn btn-primary">Mi cuenta</a>
+            <a href="login.html" class="btn btn-primary">Mi cuenta</a>
         </div>
         <div class= "contenedor2">
                 <p class="contacto">Contáctanos<br> 987654321</p>
