--- a/login.html
+++ b/login.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat+Alternates:wght@300;400;500;600;700&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;400;500;600;700&display=swap" rel="stylesheet">   
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="estilos.css"/>
+    <link rel="stylesheet" href="estilos_login.css"/>
     <title>LOGIN</title>
 </head>
 <body>      
@@ -15,6 +15,9 @@
         <div class="information">
             <div class="info-childs">
                 <h2>Bienvenido</h2>
+                <p>
+                    ¿Ya tienes una cuenta? Inicia Sesión y accede a nuestros productos.
+                </p>
                 <input type="button" value="Iniciar Sesión">
             </div>
         </div>
@@ -26,7 +29,7 @@
                     <i class='bx bxl-facebook-circle' ></i>
                 </div>
                 <p> O usa tu correo para registrarte</p>
-                <form>
+                <form class="form">
                     <label>
                         <i class='bx bx-user'></i> 
                         <input type="text" placeholder="Nombre Completo">   
